Fix to gallery height on mobile

--- a/TMOCJ/css/styles.css
+++ b/TMOCJ/css/styles.css
@@ -541,11 +541,49 @@ section h2 {
 }
 
 #gallery article.image {
-  background-image: url("../img/gallery/gallery-1.jpg");
-  background-position: center 0;
-  background-size: cover;
   height: 100%;
-  min-height: 283px;
+  min-height: 216px;
+  overflow: hidden;
+  position: relative;
+}
+
+#gallery article.image img {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  transition: opacity 400ms ease-out;
+  -webkit-transition: opacity 400ms ease-out;
+  -ms-transition: opacity 400ms ease-out;
+  top: 0;
+  width: 100%;
+}
+
+#gallery article.image img.active {
+  opacity: 1;
+  transition: opacity 400ms ease-out;
+  -webkit-transition: opacity 400ms ease-out;
+  -ms-transition: opacity 400ms ease-out;
+}
+
+#gallery .control {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 32px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  width: 48px;
+  z-index: 9;
+}
+
+#gallery .control.previous {
+  background-image: url("../img/icon-back.png");
+  left: 0;
+}
+
+#gallery .control.next {
+  background-image: url("../img/icon-next.png");
+  right: 0;
 }
 
 #support {
